# semantic-id-stage-1

./: .gitignore  SERVER_SETUP.md  pyproject.toml  sasrec_summary.csv
configs/: mostpop.yaml  random.yaml  sasrec_content.yaml  sasrec_id.yaml  tune_sasrec.yaml
configs/data/: yambda.yaml
configs/model/: sasrec.yaml
configs/trainer/: default.yaml  sasrec.yaml
configs/wandb/: default.yaml
docs/: ablation_execution_strategy.md  eval_protocol.md  experiment_plan.md  experiment_plan_final.md  experiment_plan_revised.md  progress.md  risks_and_limitations.md  yambda_benchmark_reuse.md
scripts/: 01_load_and_inspect.py  02_filter_items_by_embeddings.py  03_dedupe_and_filter.py  04_compute_statistics.py  05_global_temporal_split.py  06_create_subsamples.py  07_sanity_check_embeddings.py  08_push_to_hub.py  09_build_item_id_map.py  10_pull_from_hub.py  aggregate_baselines.py  aggregate_sasrec.py  config.py  make_pca_3d.py  run_stage1.sh  train_mostpop.py  train_random.py  train_sasrec.py  tune_sasrec.py
scripts/utils/: io.py  parquet.py
src/baselines/: __init__.py  popularity.py  random_rec.py
src/data/: __init__.py  dataset.py  paths.py
src/logger/: __init__.py  wandb_writer.py
src/metrics/: __init__.py  metrics.py  ranking.py
src/sasrec/: __init__.py  collate.py  dataset.py  eval_loop.py  extract.py  loss.py  model.py  trainer.py
src/utils/: __init__.py  aggregator.py  io.py  seed.py  stats.py
tests/: test_baselines.py  test_metrics.py  test_ranking.py  test_sasrec.py  test_wandb_writer.py
